force-app/main/default/objects/Omnichannel_Rule__c/Omnichannel_Rule__c.object-meta.xml
<CustomObject>
    <label>Omnichannel Rule</label>
    <nameField>
        <label>Omnichannel Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Omnichannel Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>