force-app/main/default/objects/Omnichannel_Rule__c/fields/Champ__c.field-meta.xml
<CustomField>
    <fullName>Champ__c</fullName>
    <label>Champ</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Objet__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Origin</fullName>
            </value>
            <value>
                <fullName>MeterDataAcces__c</fullName>
            </value>
            <value>
                <fullName>CPV_E_Canal_d_envoi__c</fullName>
            </value>
            <value>
                <fullName>CPV_SA_Canal_d_envoi__c</fullName>
            </value>
            <value>
                <fullName>Reason</fullName>
            </value>
            <value>
                <fullName>RecordTypeId</fullName>
            </value>
            <value>
                <fullName>SourceId</fullName>
            </value>
            <value>
                <fullName>CPV_E_Conforme__c</fullName>
            </value>
            <value>
                <fullName>CPV_SA_Conforme__c</fullName>
            </value>
            <value>
                <fullName>CPV_E_Envoyee__c</fullName>
            </value>
            <value>
                <fullName>CPV_SA_Envoyee__c</fullName>
            </value>
            <value>
                <fullName>MENS__c</fullName>
            </value>
            <value>
                <fullName>MES_urgente__c</fullName>
            </value>
            <value>
                <fullName>Motif__c</fullName>
            </value>
            <value>
                <fullName>Motif_escalade__c</fullName>
            </value>
            <value>
                <fullName>CPV_E_Motif_de_non_conformite__c</fullName>
            </value>
            <value>
                <fullName>CPV_SA_Motif_de_non_conformit__c</fullName>
            </value>
            <value>
                <fullName>InterruptionRaison__c</fullName>
            </value>
            <value>
                <fullName>SM_commentaires__c</fullName>
            </value>
            <value>
                <fullName>Sous_statut__c</fullName>
            </value>
            <value>
                <fullName>Sous_type__c</fullName>
            </value>
            <value>
                <fullName>Status</fullName>
            </value>
            <value>
                <fullName>Subject</fullName>
            </value>
            <value>
                <fullName>Type</fullName>
            </value>
            <value>
                <fullName>RoutageSite__c</fullName>
            </value>
            <value>
                <fullName>Assurance_facture__c</fullName>
            </value>
            <value>
                <fullName>Service_Payant__c</fullName>
            </value>
            <value>
                <fullName>Offre_Reference__c</fullName>
            </value>
            <value>
                <fullName>Besoin__c</fullName>
            </value>
            <value>
                <fullName>Canal__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>