force-app/main/default/objects/Omnichannel_Rule__c/fields/Competence__c.field-meta.xml
<CustomField>
    <fullName>Competence__c</fullName>
    <label>Compétence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>