force-app/main/default/objects/Omnichannel_Rule__c/fields/Objet__c.field-meta.xml
<CustomField>
    <fullName>Objet__c</fullName>
    <label>Objet</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Donnees_Vente__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>