force-app/main/default/objects/Omnichannel_Rule__c/fields/Valeur__c.field-meta.xml
<CustomField>
    <fullName>Valeur__c</fullName>
    <label>Valeur</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>