force-app/main/default/objects/Omnichannel_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Objet__c</columns>
    <columns>Champ__c</columns>
    <columns>Valeur__c</columns>
    <columns>Competence__c</columns>
    <columns>Date_de_debut__c</columns>
    <columns>Date_de_fin__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>